--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,8 @@
   padding: 10px;
   font-weight: bold;
   text-align: center;
-  border-radius: 10px;
+  border-radius: 3px;
+  color: rgb(0, 120, 231);
+  font-weight: bold;
   background-image: linear-gradient(0deg, lightgrey, white);
 }
